--- a/install
+++ b/install
@@ -1,8 +1,8 @@
 ;
 ;  PPT Installer script
 ;
-;  $Revision: 1.2 $
-;      $Date: 1996/11/24 20:52:47 $
+;  $Revision: 1.3 $
+;      $Date: 1997/05/11 16:35:10 $
 ;
 
 (message "\n"
@@ -68,6 +68,23 @@
 
 (set @default-dest (tackon ##installdir "PPT"))
 (debug "You chose" @default-dest)
+
+;
+;   Remove old modules
+;
+
+(if (exists @default-dest)
+    (delete
+        (tackon @default-dest "modules/#?")
+        (prompt "Deleting previous installation")
+        (help   "Since PPT modules can change between releases, "
+                "for now the previous installation must be deleted "
+                "before the new one is installed.")
+        (confirm)
+        (all)
+    )
+    (debug "No previous installation")
+)
 
 ;
 ;   Copy files.
