--- a/ReleaseNotes
+++ b/ReleaseNotes
@@ -1,17 +1,13 @@
 
-RELEASE NOTES FOR PPT RELEASE C-1
+RELEASE NOTES FOR PPT RELEASE C-2
 ---------------------------------
 
-This is the first public release of PPT.  I know, it
-has taken a long time to become a publically available software,
-but being a busy student and then a busy person has not
-exactly made my time less scarce.
+This is just a simple bug-fix release for now.  I'm currently
+helping Manuel in bringing BGUI back to the line of serious
+GUI packages, and thus things have been progressing quite slowly.
 
-Anyway, here it is:  The fruit of a long and dubious relationship.
+Please continue sending your suggestions...
 
-I dedicate this release to all those developers who
-have stayed with the Amiga all this time.  Without you, we'd
-all be Wintel now.
 
 /Janne
 
