Added note to README about possibly missing files.

--- a/README
+++ b/README
@@ -9,6 +9,8 @@ I'm fairly sure you know what to do with this :-)
 
 License is GPLv2.
 
+IF SOMETHING IS MISSING, PLEASE OPEN A BUG REPORT.  The cvs2git conversion may not have been perfect.
+
 Short: A Modular Image Processing Package
 Author: Janne.Jalkanen@iki.fi
 Uploader: Janne.Jalkanen@iki.fi
